Added a new article about Kes

--- a/secundarias/articulos-pasados.html
+++ b/secundarias/articulos-pasados.html
@@ -19,6 +19,16 @@
         <br>
       <div>
       <h1 class= "titulo" >Artículos pasados</h1>
+
+      <a href = "./articulos/kes.html"><h2 class= "titulo" >Kes (Un cernícalo para un rapaz)</h2>
+      <h3 class= "titulo" >Sinopsis</h3>
+
+      <p> Durante esta historia seguimos a un adolescente llamado Billy Casper que no
+        tiene mucho que decir en su vida. No es un buen estudiante, tiene un hermano (Jud) que
+        constantemente lo golpea y una madre a la que que no le interesa. Su única salvación
+        es un halcón llamado Kes, al que ha entrenado y que es la única luz de su día
+        a día...</p></a>
+
       <a href="./articulos/cartas-del-diablo-a-su-sobrino.html"><h2>Cartas del Diablo a su sobrino:</h2>
       <h3>El texto que no puede llevarse a la gran pantalla</h3>
         <p> Nunca pensé en como un libro podía influir de una forma tan sútil y
@@ -26,6 +36,7 @@
             donde presenta al mundo de una forma entretenida y muy concreta.
             Este hombre escribe tan bien su texto que tiene una imposibilidad de
             traducción a otro medio...</p></a>
+
       </div>
     </body>
 
