Added a ctf that I took part in and changed a bit the index

--- a/index.html
+++ b/index.html
@@ -13,62 +13,46 @@
 <div id="content">
 <h1 class="title">Blog de Santiago</h1>
 
-<div id="outline-container-org0bb9a9c" class="outline-2">
-<h2 id="org0bb9a9c"><a href="./canal/indice_canal.html">Canal de Youtube</a></h2>
-<div class="outline-text-2" id="text-org0bb9a9c">
+<div id="outline-container-org9a0b095" class="outline-2">
+<h2 id="org9a0b095"><a href="./canal/indice_canal.html">Canal de Youtube</a></h2>
+<div class="outline-text-2" id="text-org9a0b095">
 <p>
 Notas del canal de Youtube que tengo
 </p>
 </div>
 </div>
 
-<div id="outline-container-org9ece420" class="outline-2">
-<h2 id="org9ece420">Proyects</h2>
-<div class="outline-text-2" id="text-org9ece420">
+<div id="outline-container-org9f6525c" class="outline-2">
+<h2 id="org9f6525c">Proyects</h2>
+<div class="outline-text-2" id="text-org9f6525c">
 <p>
 La sección donde hablo de mis proyectos y normalmente discuto lo aprendido.
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgd615b9c" class="outline-2">
-<h2 id="orgd615b9c">Programación Competitiva</h2>
-<div class="outline-text-2" id="text-orgd615b9c">
-</div>
-<div id="outline-container-org46c5f22" class="outline-3">
-<h3 id="org46c5f22">Introducción</h3>
-<div class="outline-text-3" id="text-org46c5f22">
+<div id="outline-container-org4fc93cc" class="outline-2">
+<h2 id="org4fc93cc">Programación Competitiva</h2>
+<div class="outline-text-2" id="text-org4fc93cc">
 <p>
-Me gusta la programación competitiva e intento tener un registro de todas mis
-soluciones. Este es el rincón de internet que tengo para todo eso.
+Aquí tengo mi <a href="./competitiva/Algoritmario.html">algoritmario</a> que es un trabajo en proceso, pero se hace lo que
+se puede. Además de tener varias de las soluciones a problemas (TODO).
 </p>
 </div>
 </div>
 
-<div id="outline-container-org5a8dd7c" class="outline-3">
-<h3 id="org5a8dd7c">Competencia</h3>
-<div class="outline-text-3" id="text-org5a8dd7c">
+<div id="outline-container-orga74913f" class="outline-2">
+<h2 id="orga74913f"><a href="./ctf/index.html">CTF</a></h2>
+<div class="outline-text-2" id="text-orga74913f">
 <p>
-En esta sección normalmente subo las soluciones a concursos de programación y la
-retroalimentación que tengo de mis problemas.
+Esta es la parte en donde donde dejo las anotaciónes de los CTFs que participo.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org9052c91" class="outline-3">
-<h3 id="org9052c91">Entrenamiento</h3>
-<div class="outline-text-3" id="text-org9052c91">
-<p>
-Es la sección en donde pongo la retroalimentación de mis ejercicios (y sus respectivas
-soluciones). 
-</p>
-</div>
-</div>
-</div>
-
-<div id="outline-container-org154470d" class="outline-2">
-<h2 id="org154470d"><a href="./Life/index.html">Life</a></h2>
-<div class="outline-text-2" id="text-org154470d">
+<div id="outline-container-org84b3e2a" class="outline-2">
+<h2 id="org84b3e2a"><a href="./Life/index.html">Life</a></h2>
+<div class="outline-text-2" id="text-org84b3e2a">
 <p>
 De vez en cuando me gusta reseñar libros o hablar de cosas en las que pienso,
 esta es la sección en donde hablo de eso.
