Added my writeup of the JerseyCTF II

--- a/Life/I got into Google.html
+++ b/Life/I got into Google.html
@@ -21,9 +21,9 @@ I just wanted to make a quick post discussing how I got an offer from Google thi
 The internship program that I'm going to be part of is called STEP.
 </p>
 
-<div id="outline-container-orgc413f16" class="outline-2">
-<h2 id="orgc413f16">How much and what did I study?</h2>
-<div class="outline-text-2" id="text-orgc413f16">
+<div id="outline-container-org83aae3b" class="outline-2">
+<h2 id="org83aae3b">How much and what did I study?</h2>
+<div class="outline-text-2" id="text-org83aae3b">
 <p>
 So normally people tend to study a lot for this kind of interviews. I have discussed this with
 some of my friends and the popular advice online is to roughly study around a month and grind
@@ -38,9 +38,9 @@ grind in less than a week.
 </div>
 </div>
 
-<div id="outline-container-org74f8e53" class="outline-2">
-<h2 id="org74f8e53">So what did I do?</h2>
-<div class="outline-text-2" id="text-org74f8e53">
+<div id="outline-container-orgc66b352" class="outline-2">
+<h2 id="orgc66b352">So what did I do?</h2>
+<div class="outline-text-2" id="text-orgc66b352">
 <p>
 I ended up studying roughly three to four hours a day through a series of the classical algorithms
 and compressing on some information.
@@ -103,9 +103,9 @@ The following is a table of all of the things that I studied before the intervie
 </div>
 </div>
 
-<div id="outline-container-org56dcc05" class="outline-2">
-<h2 id="org56dcc05">Some thoughts after the interview</h2>
-<div class="outline-text-2" id="text-org56dcc05">
+<div id="outline-container-org7379ec7" class="outline-2">
+<h2 id="org7379ec7">Some thoughts after the interview</h2>
+<div class="outline-text-2" id="text-org7379ec7">
 <p>
 I didn't think that the interviewers were really harsh. On the contrary, they were really cheering
 me to program my ideas. And the problems were not impossible compared to some of the horror stories
@@ -114,9 +114,9 @@ of impossible problems I heard.
 </div>
 </div>
 
-<div id="outline-container-orga45847c" class="outline-2">
-<h2 id="orga45847c">Really excited for the future</h2>
-<div class="outline-text-2" id="text-orga45847c">
+<div id="outline-container-orgac1e8b8" class="outline-2">
+<h2 id="orgac1e8b8">Really excited for the future</h2>
+<div class="outline-text-2" id="text-orgac1e8b8">
 <p>
 In conclusion I think I'm really excited for the future and I will make another entry
 when I end the internship. For now I think I am really excited to learn.
