--- a/canal/Aprender con Unix.html
+++ b/canal/Aprender con Unix.html
@@ -14,9 +14,9 @@
 <h1 class="title">Aprender con Unix</h1>
 
 
-<div id="outline-container-org3ea58fc" class="outline-2">
-<h2 id="org3ea58fc">¿A que me refiero con aprender con Unix?</h2>
-<div class="outline-text-2" id="text-org3ea58fc">
+<div id="outline-container-orgcfd19c7" class="outline-2">
+<h2 id="orgcfd19c7">¿A que me refiero con aprender con Unix?</h2>
+<div class="outline-text-2" id="text-orgcfd19c7">
 <p>
 Con herramientas del estilo unix, puedes esperar a encontrarte a muchas
 patrones. Estos patrones se crearon como una comodidad y normalmente en los
@@ -26,18 +26,18 @@ ideas.
 </div>
 </div>
 
-<div id="outline-container-orgbdf02f3" class="outline-2">
-<h2 id="orgbdf02f3">La bandera más importante</h2>
-<div class="outline-text-2" id="text-orgbdf02f3">
+<div id="outline-container-org8ed530e" class="outline-2">
+<h2 id="org8ed530e">La bandera más importante</h2>
+<div class="outline-text-2" id="text-org8ed530e">
 <p>
 <code>-h --help</code> es la bandera con la que pudes pedir ayuda en cualquier herramienta
 de comandos.
 </p>
 </div>
 
-<div id="outline-container-orge0615a2" class="outline-3">
-<h3 id="orge0615a2">Ejemplo:</h3>
-<div class="outline-text-3" id="text-orge0615a2">
+<div id="outline-container-orgefdebe7" class="outline-3">
+<h3 id="orgefdebe7">Ejemplo:</h3>
+<div class="outline-text-3" id="text-orgefdebe7">
 <ul class="org-ul">
 <li><code>cd --help</code>
 <ul class="org-ul">
@@ -48,13 +48,13 @@ de comandos.
 </div>
 </div>
 
-<div id="outline-container-orgf0a4e46" class="outline-2">
-<h2 id="orgf0a4e46">Herramientas para leer documentación:</h2>
-<div class="outline-text-2" id="text-orgf0a4e46">
+<div id="outline-container-org3d8af75" class="outline-2">
+<h2 id="org3d8af75">Herramientas para leer documentación:</h2>
+<div class="outline-text-2" id="text-org3d8af75">
 </div>
-<div id="outline-container-orga506f1a" class="outline-3">
-<h3 id="orga506f1a">Introducción:</h3>
-<div class="outline-text-3" id="text-orga506f1a">
+<div id="outline-container-org5b8928e" class="outline-3">
+<h3 id="org5b8928e">Introducción:</h3>
+<div class="outline-text-3" id="text-org5b8928e">
 <p>
 La mayoría de los sistemas de Unix tienen secciónes de sus manuales<sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup>,
 estas son las siguientes:
@@ -76,18 +76,18 @@ man(7), groff(7)</li>
 </div>
 
 
-<div id="outline-container-org277bd52" class="outline-3">
-<h3 id="org277bd52"><code>apropos(1)</code></h3>
-<div class="outline-text-3" id="text-org277bd52">
+<div id="outline-container-org9cd6e39" class="outline-3">
+<h3 id="org9cd6e39"><code>apropos(1)</code></h3>
+<div class="outline-text-3" id="text-org9cd6e39">
 <p>
 <code>apropos(1)</code> es una herramienta que busca en los manuales de las páginas y sus
 descripciónes.
 </p>
 </div>
 
-<div id="outline-container-org9ae52af" class="outline-4">
-<h4 id="org9ae52af">Banderas Importantes:</h4>
-<div class="outline-text-4" id="text-org9ae52af">
+<div id="outline-container-org4967cca" class="outline-4">
+<h4 id="org4967cca">Banderas Importantes:</h4>
+<div class="outline-text-4" id="text-org4967cca">
 <ul class="org-ul">
 <li><code>-a --and</code> hace un and lógico en donde tiene que encontrar dos términos
 especificados.</li>
@@ -96,9 +96,9 @@ especificados.</li>
 </div>
 </div>
 
-<div id="outline-container-org25f7e9a" class="outline-4">
-<h4 id="org25f7e9a">Ejemplos:</h4>
-<div class="outline-text-4" id="text-org25f7e9a">
+<div id="outline-container-org95a2031" class="outline-4">
+<h4 id="org95a2031">Ejemplos:</h4>
+<div class="outline-text-4" id="text-org95a2031">
 <ul class="org-ul">
 <li><code>apropos vim</code> 
 <ul class="org-ul">
@@ -119,9 +119,9 @@ especificados.</li>
 </div>
 </div>
 
-<div id="outline-container-org7667d1a" class="outline-3">
-<h3 id="org7667d1a"><code>whatis(1)</code></h3>
-<div class="outline-text-3" id="text-org7667d1a">
+<div id="outline-container-orged861b6" class="outline-3">
+<h3 id="orged861b6"><code>whatis(1)</code></h3>
+<div class="outline-text-3" id="text-orged861b6">
 <p>
 Encuentra en una sóla línea lo que estas tratando de buscar. Se lleva muy bien
 con <code>apropos(1)</code>.
@@ -134,18 +134,18 @@ hace con <code>whatis(1)</code>.
 </p>
 </div>
 
-<div id="outline-container-orgbc49eda" class="outline-4">
-<h4 id="orgbc49eda">Banderas importantes</h4>
-<div class="outline-text-4" id="text-orgbc49eda">
+<div id="outline-container-orge11a82e" class="outline-4">
+<h4 id="orge11a82e">Banderas importantes</h4>
+<div class="outline-text-4" id="text-orge11a82e">
 <ul class="org-ul">
 <li><code>-r --regex</code> expresiónes regulares</li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org749dfb4" class="outline-4">
-<h4 id="org749dfb4">Ejemplos:</h4>
-<div class="outline-text-4" id="text-org749dfb4">
+<div id="outline-container-orge07ad96" class="outline-4">
+<h4 id="orge07ad96">Ejemplos:</h4>
+<div class="outline-text-4" id="text-orge07ad96">
 <ul class="org-ul">
 <li><code>whatis emacs</code>
 <ul class="org-ul">
@@ -156,9 +156,9 @@ hace con <code>whatis(1)</code>.
 </div>
 </div>
 
-<div id="outline-container-orgac85a74" class="outline-3">
-<h3 id="orgac85a74"><code>man(1)</code></h3>
-<div class="outline-text-3" id="text-orgac85a74">
+<div id="outline-container-org63c74ed" class="outline-3">
+<h3 id="org63c74ed"><code>man(1)</code></h3>
+<div class="outline-text-3" id="text-org63c74ed">
 <p>
 Es la herramienta que normalmente se usa para encontrar la información de los
 <code>manuales</code> en los distintos sistemas operativos de tipo *nix.
@@ -184,9 +184,9 @@ que uno puede hacer es poner el número de la página <code>man 7 man</code> o t
 </div>
 </div>
 
-<div id="outline-container-orge18e7d5" class="outline-3">
-<h3 id="orge18e7d5">Otros recursos</h3>
-<div class="outline-text-3" id="text-orge18e7d5">
+<div id="outline-container-orgc4285a2" class="outline-3">
+<h3 id="orgc4285a2">Otros recursos</h3>
+<div class="outline-text-3" id="text-orgc4285a2">
 <ul class="org-ul">
 <li><a href="https://wiki.archlinux.org/">Archwiki</a></li>
 <li><a href="https://man.openbsd.org/">Manual de OpenBSD</a></li>
@@ -196,8 +196,8 @@ que uno puede hacer es poner el número de la página <code>man 7 man</code> o t
 </div>
 </div>
 
-<div id="outline-container-org3fdb45f" class="outline-2">
-<h2 id="org3fdb45f"><a href="./indice_canal.html">Indice de las notas del canal</a></h2>
+<div id="outline-container-org2e7a56d" class="outline-2">
+<h2 id="org2e7a56d"><a href="./indice_canal.html">Indice de las notas del canal</a></h2>
 </div>
 <div id="footnotes">
 <h2 class="footnotes">Footnotes: </h2>
