--- a/canal/Excel con Emacs.html
+++ b/canal/Excel con Emacs.html
@@ -12,12 +12,12 @@
 <body>
 <div id="content">
 <h1 class="title">Excel con Emacs</h1>
-<div id="outline-container-orgb0d6a37" class="outline-2">
-<h2 id="orgb0d6a37">Introducción a las tablas</h2>
+<div id="outline-container-org739b922" class="outline-2">
+<h2 id="org739b922">Introducción a las tablas</h2>
 </div>
-<div id="outline-container-org6ae251d" class="outline-2">
-<h2 id="org6ae251d">Un ejemplo</h2>
-<div class="outline-text-2" id="text-org6ae251d">
+<div id="outline-container-orgb5cbcdc" class="outline-2">
+<h2 id="orgb5cbcdc">Un ejemplo</h2>
+<div class="outline-text-2" id="text-orgb5cbcdc">
 <p>
 Puedes usar <code>C-c ?</code> cuando estás en una tabla para ver lo que puedes hacer.
 </p>
@@ -70,17 +70,17 @@ Puedes usar <code>C-c ?</code> cuando estás en una tabla para ver lo que puedes
 </table>
 </div>
 </div>
-<div id="outline-container-org1fc8c7e" class="outline-2">
-<h2 id="org1fc8c7e">Puedes usar emacs lisp</h2>
+<div id="outline-container-org703f9c2" class="outline-2">
+<h2 id="org703f9c2">Puedes usar emacs lisp</h2>
 </div>
 
-<div id="outline-container-orgcb9522b" class="outline-2">
-<h2 id="orgcb9522b">Puedes graficar con <code>gnuplot</code> y ascii art</h2>
+<div id="outline-container-org0c8c3ff" class="outline-2">
+<h2 id="org0c8c3ff">Puedes graficar con <code>gnuplot</code> y ascii art</h2>
 </div>
 
-<div id="outline-container-org0cb1c5b" class="outline-2">
-<h2 id="org0cb1c5b">Calc y las fórmulas de elisp</h2>
-<div class="outline-text-2" id="text-org0cb1c5b">
+<div id="outline-container-org3026298" class="outline-2">
+<h2 id="org3026298">Calc y las fórmulas de elisp</h2>
+<div class="outline-text-2" id="text-org3026298">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -175,9 +175,9 @@ Puedes usar <code>C-c ?</code> cuando estás en una tabla para ver lo que puedes
 </table>
 </div>
 </div>
-<div id="outline-container-orga983a6b" class="outline-2">
-<h2 id="orga983a6b">Plot</h2>
-<div class="outline-text-2" id="text-orga983a6b">
+<div id="outline-container-org948414f" class="outline-2">
+<h2 id="org948414f">Plot</h2>
+<div class="outline-text-2" id="text-org948414f">
 <p>
 Tienes que instalar <code>gnuplot</code>.  
 </p>
@@ -233,9 +233,9 @@ Tienes que instalar <code>gnuplot</code>.
 </div>
 </div>
 
-<div id="outline-container-orgab4ca6f" class="outline-2">
-<h2 id="orgab4ca6f">ASCII Plot</h2>
-<div class="outline-text-2" id="text-orgab4ca6f">
+<div id="outline-container-org6b63c26" class="outline-2">
+<h2 id="org6b63c26">ASCII Plot</h2>
+<div class="outline-text-2" id="text-org6b63c26">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -285,9 +285,9 @@ Tienes que instalar <code>gnuplot</code>.
 </div>
 </div>
 
-<div id="outline-container-orgb5b011c" class="outline-2">
-<h2 id="orgb5b011c">Referencias</h2>
-<div class="outline-text-2" id="text-orgb5b011c">
+<div id="outline-container-orgc3dbe07" class="outline-2">
+<h2 id="orgc3dbe07">Referencias</h2>
+<div class="outline-text-2" id="text-orgc3dbe07">
 <ul class="org-ul">
 <li><a href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html</a></li>
 <li><a href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-lisp-formulas.html">https://orgmode.org/worg/org-tutorials/org-spreadsheet-lisp-formulas.html</a></li>
