--- a/canal/Haciendo ansi-term usable.html
+++ b/canal/Haciendo ansi-term usable.html
@@ -13,9 +13,9 @@
 <div id="content">
 <h1 class="title">Haciendo ansi-term usable</h1>
 
-<div id="outline-container-orgdb16a37" class="outline-2">
-<h2 id="orgdb16a37">Introducción</h2>
-<div class="outline-text-2" id="text-orgdb16a37">
+<div id="outline-container-org4a91abb" class="outline-2">
+<h2 id="org4a91abb">Introducción</h2>
+<div class="outline-text-2" id="text-org4a91abb">
 <p>
 Si has usado alguna vez emacs me imagino que haz tenido este problema.
 </p>
@@ -37,9 +37,9 @@ dos problemas de encima.
 </div>
 </div>
 
-<div id="outline-container-org0741ada" class="outline-2">
-<h2 id="org0741ada">Copiando y pegando texto</h2>
-<div class="outline-text-2" id="text-org0741ada">
+<div id="outline-container-org775841a" class="outline-2">
+<h2 id="org775841a">Copiando y pegando texto</h2>
+<div class="outline-text-2" id="text-org775841a">
 <p>
 Tal vez no sepas esto pero es importante, <b>los modos en Emacs mueven al mundo</b>.
 El problema que principal se resuelve con una serie de comandos.
@@ -53,9 +53,9 @@ El problema que principal se resuelve con una serie de comandos.
 </div>
 
 
-<div id="outline-container-org9792ffb" class="outline-2">
-<h2 id="org9792ffb">Hacer que la terminal se vea bien</h2>
-<div class="outline-text-2" id="text-org9792ffb">
+<div id="outline-container-org513dc64" class="outline-2">
+<h2 id="org513dc64">Hacer que la terminal se vea bien</h2>
+<div class="outline-text-2" id="text-org513dc64">
 <p>
 Podemos utilizar el paquete publicado dieggsy para hacer que la terminal
 se pueda usar y no tener problemas con el color cuando abrimos terminal
@@ -90,8 +90,8 @@ Puedes agregar esta línea a tu <b>.emacs</b>.
 </div>
 </div>
 
-<div id="outline-container-org45c9a73" class="outline-2">
-<h2 id="org45c9a73"><a href="./indice_canal.html">Indice de las notas del Canal</a></h2>
+<div id="outline-container-org3b3499d" class="outline-2">
+<h2 id="org3b3499d"><a href="./indice_canal.html">Indice de las notas del Canal</a></h2>
 </div>
 </div>
 <div id="postamble" class="status">
