--- a/canal/Usando GNOME-BOXES.html
+++ b/canal/Usando GNOME-BOXES.html
@@ -13,9 +13,9 @@
 <div id="content">
 <h1 class="title">Usando Gnome-boxes</h1>
 
-<div id="outline-container-org247d4a9" class="outline-2">
-<h2 id="org247d4a9">¿Qué es gnome-boxes?</h2>
-<div class="outline-text-2" id="text-org247d4a9">
+<div id="outline-container-orgcbec517" class="outline-2">
+<h2 id="orgcbec517">¿Qué es gnome-boxes?</h2>
+<div class="outline-text-2" id="text-orgcbec517">
 <p>
 <code>gnome-boxes</code> es una de las aplicaciónes de gnome que vienen junto con el
 desktop enviroment de GNU y sirve como un frontend para QEMU.
@@ -31,9 +31,9 @@ fácil usar y es bueno para empezar a utilizar máquinas virtuales (VM).
 </div>
 
 
-<div id="outline-container-orgf844646" class="outline-2">
-<h2 id="orgf844646">Instalación</h2>
-<div class="outline-text-2" id="text-orgf844646">
+<div id="outline-container-orgad0ac24" class="outline-2">
+<h2 id="orgad0ac24">Instalación</h2>
+<div class="outline-text-2" id="text-orgad0ac24">
 <ul class="org-ul">
 <li>Fedora: <code># dnf install gnome-boxes</code></li>
 <li>Arch: <code># apt install gnome-boxes</code></li>
@@ -42,9 +42,9 @@ fácil usar y es bueno para empezar a utilizar máquinas virtuales (VM).
 </div>
 </div>
 
-<div id="outline-container-org6797cdf" class="outline-2">
-<h2 id="org6797cdf">Uso</h2>
-<div class="outline-text-2" id="text-org6797cdf">
+<div id="outline-container-orgb3d4525" class="outline-2">
+<h2 id="orgb3d4525">Uso</h2>
+<div class="outline-text-2" id="text-orgb3d4525">
 <p>
 Puedes descargar .iso de distintas partes de internet o directamente después de
 hacer click en el botón de + de la esquina superior derecha tienes la opción
@@ -69,13 +69,13 @@ la máquina virtual y terminamos.
 </div>
 </div>
 
-<div id="outline-container-org0ae6ae7" class="outline-2">
-<h2 id="org0ae6ae7">Más funcionalidad</h2>
-<div class="outline-text-2" id="text-org0ae6ae7">
+<div id="outline-container-org6fc4e84" class="outline-2">
+<h2 id="org6fc4e84">Más funcionalidad</h2>
+<div class="outline-text-2" id="text-org6fc4e84">
 </div>
-<div id="outline-container-org5bc3314" class="outline-3">
-<h3 id="org5bc3314">Express install</h3>
-<div class="outline-text-3" id="text-org5bc3314">
+<div id="outline-container-org7a9b059" class="outline-3">
+<h3 id="org7a9b059">Express install</h3>
+<div class="outline-text-3" id="text-org7a9b059">
 <p>
 <b>Express install</b> es un modo de instalación de un sistema operativo que automáticamente
 instala la máquina virtual por ti y que configura todo.
@@ -88,9 +88,9 @@ existen para probar otra cosa.
 </div>
 </div>
 
-<div id="outline-container-orga56f1c9" class="outline-3">
-<h3 id="orga56f1c9">Instalación normal</h3>
-<div class="outline-text-3" id="text-orga56f1c9">
+<div id="outline-container-org0653655" class="outline-3">
+<h3 id="org0653655">Instalación normal</h3>
+<div class="outline-text-3" id="text-org0653655">
 <p>
 Para la siguiente sección lo único que tenemos que hacer es instalar un programa
 llamado <code>spice-webdavd</code>.<sup><a id="fnr.3" class="footref" href="#fn.3">3</a></sup>
@@ -99,9 +99,9 @@ llamado <code>spice-webdavd</code>.<sup><a id="fnr.3" class="footref" href="#fn.
 </div>
 </div>
 
-<div id="outline-container-org9285612" class="outline-2">
-<h2 id="org9285612">Futuro</h2>
-<div class="outline-text-2" id="text-org9285612">
+<div id="outline-container-org1848a96" class="outline-2">
+<h2 id="org1848a96">Futuro</h2>
+<div class="outline-text-2" id="text-org1848a96">
 <p>
 En el próximo video veremos como usar otro programa que también utiliza QEMU
 como lo hace 
@@ -109,8 +109,8 @@ como lo hace
 </div>
 </div>
 
-<div id="outline-container-org7cbdcef" class="outline-2">
-<h2 id="org7cbdcef"><a href="./indice_canal.html">Indice de las notas del Canal</a></h2>
+<div id="outline-container-org01a83fb" class="outline-2">
+<h2 id="org01a83fb"><a href="./indice_canal.html">Indice de las notas del Canal</a></h2>
 </div>
 <div id="footnotes">
 <h2 class="footnotes">Footnotes: </h2>
