--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 <div id="content">
 <h1 class="title">Blog de Santiago</h1>
 
-<div id="outline-container-org9a0b095" class="outline-2">
-<h2 id="org9a0b095"><a href="./canal/indice_canal.html">Canal de Youtube</a></h2>
-<div class="outline-text-2" id="text-org9a0b095">
+<div id="outline-container-org7c0aad2" class="outline-2">
+<h2 id="org7c0aad2"><a href="./canal/indice_canal.html">Canal de Youtube</a></h2>
+<div class="outline-text-2" id="text-org7c0aad2">
 <p>
 Notas del canal de Youtube que tengo
 </p>
 </div>
 </div>
 
-<div id="outline-container-org9f6525c" class="outline-2">
-<h2 id="org9f6525c">Proyects</h2>
-<div class="outline-text-2" id="text-org9f6525c">
+<div id="outline-container-org56fce0b" class="outline-2">
+<h2 id="org56fce0b">Proyects</h2>
+<div class="outline-text-2" id="text-org56fce0b">
 <p>
 La sección donde hablo de mis proyectos y normalmente discuto lo aprendido.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org4fc93cc" class="outline-2">
-<h2 id="org4fc93cc">Programación Competitiva</h2>
-<div class="outline-text-2" id="text-org4fc93cc">
+<div id="outline-container-org7010ae6" class="outline-2">
+<h2 id="org7010ae6">Programación Competitiva</h2>
+<div class="outline-text-2" id="text-org7010ae6">
 <p>
 Aquí tengo mi <a href="./competitiva/Algoritmario.html">algoritmario</a> que es un trabajo en proceso, pero se hace lo que
 se puede. Además de tener varias de las soluciones a problemas (TODO).
@@ -41,18 +41,18 @@ se puede. Además de tener varias de las soluciones a problemas (TODO).
 </div>
 </div>
 
-<div id="outline-container-orga74913f" class="outline-2">
-<h2 id="orga74913f"><a href="./ctf/index.html">CTF</a></h2>
-<div class="outline-text-2" id="text-orga74913f">
+<div id="outline-container-org8a663bd" class="outline-2">
+<h2 id="org8a663bd"><a href="./ctf/index.html">CTF</a></h2>
+<div class="outline-text-2" id="text-org8a663bd">
 <p>
 Esta es la parte en donde donde dejo las anotaciónes de los CTFs que participo.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org84b3e2a" class="outline-2">
-<h2 id="org84b3e2a"><a href="./Life/index.html">Life</a></h2>
-<div class="outline-text-2" id="text-org84b3e2a">
+<div id="outline-container-org622120c" class="outline-2">
+<h2 id="org622120c"><a href="./Life/index.html">Life</a></h2>
+<div class="outline-text-2" id="text-org622120c">
 <p>
 De vez en cuando me gusta reseñar libros o hablar de cosas en las que pienso,
 esta es la sección en donde hablo de eso.
