--- a/canal/indice_canal.html
+++ b/canal/indice_canal.html
@@ -13,13 +13,13 @@
 <div id="content">
 <h1 class="title">Indice del Canal</h1>
 
-<div id="outline-container-orgd9d83b7" class="outline-2">
-<h2 id="orgd9d83b7">Notas de los videos</h2>
-<div class="outline-text-2" id="text-orgd9d83b7">
+<div id="outline-container-org217df3f" class="outline-2">
+<h2 id="org217df3f">Notas de los videos</h2>
+<div class="outline-text-2" id="text-org217df3f">
 </div>
-<div id="outline-container-org5aa3e6a" class="outline-3">
-<h3 id="org5aa3e6a">MISC</h3>
-<div class="outline-text-3" id="text-org5aa3e6a">
+<div id="outline-container-org913820f" class="outline-3">
+<h3 id="org913820f">MISC</h3>
+<div class="outline-text-3" id="text-org913820f">
 <ul class="org-ul">
 <li><a href="./Aprender con Unix.html">Aprender con Unix</a></li>
 <li><a href="./Usando GNOME-BOXES.html">Usando Gnome-boxes</a></li>
@@ -27,9 +27,9 @@
 </div>
 </div>
 
-<div id="outline-container-orga68fa06" class="outline-3">
-<h3 id="orga68fa06">Emacs</h3>
-<div class="outline-text-3" id="text-orga68fa06">
+<div id="outline-container-org4bd45c6" class="outline-3">
+<h3 id="org4bd45c6">Emacs</h3>
+<div class="outline-text-3" id="text-org4bd45c6">
 <ul class="org-ul">
 <li><a href="./Haciendo ansi-term usable.html">Haciendo <code>ansi-term</code> usable</a></li>
 <li><a href="./Excel con Emacs.html">Excel con Emacs</a></li>
@@ -37,8 +37,8 @@
 </div>
 </div>
 </div>
-<div id="outline-container-orgf51929b" class="outline-2">
-<h2 id="orgf51929b"><a href="../index.html">Indice</a></h2>
+<div id="outline-container-org24d5d39" class="outline-2">
+<h2 id="org24d5d39"><a href="../index.html">Indice</a></h2>
 </div>
 </div>
 <div id="postamble" class="status">
