Added an article about crypto

--- a/Life/index.html
+++ b/Life/index.html
@@ -18,6 +18,7 @@
 <h1 class="title">Index of posts in Life</h1>
 <ul class="org-ul">
 <li><a href="./I got into Google.html">I got an offer at Google</a></li>
+<li><a href="./Not_crypto_private.html">Why are we calling it crypto?</a></li>
 </ul>
 </div>
 <div id="postamble" class="status">
