Added a new article

--- a/Life/index.html
+++ b/Life/index.html
@@ -19,6 +19,7 @@
 <ul class="org-ul">
 <li><a href="./I got into Google.html">I got an offer at Google</a></li>
 <li><a href="./Not_crypto_private.html">Why are we calling it crypto?</a></li>
+<li><a href="./digital_anxiety.html">Digital Anxiety</a></li>
 </ul>
 </div>
 <div id="postamble" class="status">
